<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewTask">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextNewTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/new_task"
            android:inputType="textCapSentences"
            android:maxLength="80"
            android:padding="10dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:buttonTint="@color/orange"
            android:id="@+id/checkDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_add_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNewTask" />

        <EditText
            android:nestedScrollingEnabled="true"
            android:gravity="top"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@null"
            android:inputType="textMultiLine"
            android:hint="@string/add_description"
            android:id="@+id/editTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/checkDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSave"
            android:text="@string/submit"
            android:fontFamily="@font/prompt_medium"
            android:textSize="16sp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:src="@drawable/ic_save_task_dark"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTaskDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>