<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:padding="10dp"
        android:gravity="center"
        android:id="@+id/textViewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks"
        android:fontFamily="@font/prompt_medium"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        app:layout_constraintBottom_toTopOf="@+id/btnNewTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTask"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:fontFamily="@font/prompt_medium"
        android:id="@+id/btnNewTask"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:drawableStart="@drawable/ic_add_new_task_dark"
        android:paddingHorizontal="20dp"
        android:text="@string/add_new_task"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:fontFamily="@font/prompt_regular"
        android:visibility="gone"
        android:id="@+id/textViewNoTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tasks_available"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/btnNewTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTask" />

    <Button
        android:id="@+id/button"
        style="?borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="userLogout"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/orangeDark2"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>